# sandpuppy

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile-analysis  Makefile  README.md  afl-fuzz.c  build_all.sh  clean_all.sh  clean_traces.sh  compile_commands.json  config.h  fuzz_all.sh  requirements.txt
demo/: demo
include/: heaptrace.h  lftrace.h
infantheap/: build-commands.txt  infantheap.c
infantheap/seeds/: first.txt  second.txt
libpng/: atraces_calls.pl  trace-length-1.6.15.csv  traceb.pl  tracesquash.pl
llvm_mode/: Makefile  afl-clang-fast.c  afl-llvm-rt.o.c  asan-report-hook.c  basefeedback.hpp  fuzzfactory.hpp  shared-opts.cc  waypoints-asan-pass.cc  waypoints-heap-pass.cc  waypoints-heap2-pass.cc  waypoints-heap2-rt.c  waypoints-heap3-pass.cc  waypoints-heap3-rt.c  waypoints-heapasan-rt.c  waypoints-heaptrace-pass.cc  waypoints-heaptrace-rt.c  waypoints-lfbbf-pass.cc  waypoints-lfbbf-rt.c  waypoints-lfcof-pass.cc  waypoints-lff-pass.cc  waypoints-lff-rt.c  waypoints-trace-pass.cc  waypoints-trace-rt.c  waypoints-varprint-pass.cc  waypoints-varprint-rt.c  waypoints-vvdump-rt.c
notes/: compile_standalone_mips.txt  dnc_inputs.txt  requirements-with-tensorflow.txt  vectorization_of_traces.txt
resources/: analysis-job.yaml  fuzz_config.yml  jsoncpp-basic-blocks.txt  level-solution-pos.txt  libpng-basic-blocks.txt  maze_vvhash_variables_file.txt  rarebug_variables_file.txt  rarebug_vvperm_variables_file.txt  readpng.c  redis-backup.yml  redis.yaml  redis.yml
resources/archives/libpng/: readpng.c
resources/archives/libtpms/: base64.h  readtpmc-original.c  readtpmc-printcmds.c  readtpmc.c
resources/binaries/: dmg2img  dmg2img-bbprinter  readelf  readelf-bbprinter  readjson  readjson-bbprinter  readpng  readpng-bbprinter
resources/seeds/libtpms/: Iw1hUkw7DNzFE  PGJ5jjBy7LnJe  jvoaW3wK5U5Y8  wqw34M50RZZcl
resources/seeds/maze/: first.txt
resources/seeds/rarebug/: first.txt
resources/seeds/readelf/: hello-mips
resources/seeds/vctestbed/: fuzz
resources/subjects/infantheap/: infantheap.c
resources/subjects/rarebug/: rarebug.c
scripts/: .build_infantheap.sh.swp  .build_libpng.sh.swp  .exp.pl.swp  .fuzz_infantheap.sh.swp  .fuzz_readelf.sh.swp  all-smbc-findpos.pl  analyze_diverse_fullcmd_libtpms_results.pl  analyze_diverse_libtpms_results.pl  analyze_jsoncpp_coverage.pl  analyze_jsoncpp_coverage_over_time.pl  analyze_jsoncpp_only_cov_over_time.pl  analyze_jsoncpp_other_fuzzers_coverage.pl  analyze_jsoncpp_results.pl  analyze_libpng_bb_feedback_results.pl  analyze_libpng_feedback_results.pl  analyze_libtpms_feedback_results.pl  analyze_libtpms_results.pl  analyze_libtpms_results_mp.pl  analyze_other_fuzzers_coverage.pl  analyze_results.pl  angr_tracegen.pl  app-rarebug-findsol  backup_redis.pl  bg_analyze_results.sh  build_infantheap.sh  build_libpng.sh  build_readelf.sh  codegen.pl  crash_discovery_times.sh  diverse_fullcmd_libtpms_lengths_over_time_results.pl  dyn.pl  exp.pl  filter_valid_diverse_fullcmd_libtpms_inputs.pl  filter_valid_jsoncpp_results.pl  fuzz_infantheap.sh  fuzz_libpng.sh  fuzz_readelf.sh  gather_new_jsoncpp_seeds.pl  get_fuzzer_stats  get_json_complexity.pl  (+29 more)
scripts/modules/: analysis.pm  cgc.pm  display.pm  dmg2img.pm  infantheap.pm  jsoncpp.pm  lavam.pm  libpng.pm  libtins.pm  libtpms.pm  maze.pm  pcapplusplus.pm  rarebug.pm  readelf.pm  smbc.pm  tasks.pm  utils.pm  vctestbed.pm  vvdprocessor.pm  vvdump.pm
subjects/cb-multios/: CMakeLists.txt  build.sh
subjects/cb-multios/include/: ansi_x931_aes128.c  libcgc.c
subjects/infantheap/: hello.S  hello.c
subjects/maze/: maze-anim.c  maze-disp.c  maze-phash.c  maze.c  maze_ijon.c  maze_klee.c
subjects/rarebug/: rarebug-gp.c  rarebug.c
subjects/vctestbed/: vctestbed.c
tools/FuzzFactory/: Makefile  afl-fuzz.c  config.h
tools/FuzzFactory/include/: lftrace.h  vvdump.h  waypoints.h
tools/FuzzFactory/infantheap/: asan_opts.txt  hotest.c
tools/FuzzFactory/libpng/: atraces.pl  plot_trace_counts.py  trace-length-1.5.9.csv
tools/FuzzFactory/llvm_mode/: Makefile  afl-clang-fast.c  afl-llvm-rt.o.c  basefeedback.hpp  basevvfeedback.hpp  compile_commands.json  fuzzfactory.hpp  shared-opts.cc  waypoints-asan-rt.c  waypoints-bbprint-pass.cc  waypoints-bbprint-rt.c  waypoints-cmp-pass.cc  waypoints-diff-pass.cc  waypoints-heapasan-pass.cc  waypoints-lfbbf-pass.cc  waypoints-lfcof-rt.c  waypoints-lff-rt.c  waypoints-mem-pass.cc  waypoints-perf-pass.cc  waypoints-slow-pass.cc  waypoints-valid-pass.cc  waypoints-varprint-pass.cc  waypoints-vvdump-pass.cc  waypoints-vvdump-rt.c  waypoints-vvhash-pass.cc  waypoints-vvhash-rt.c  waypoints-vvmax-pass.cc  waypoints-vvmax-rt.c  waypoints-vvmax2-pass.cc  waypoints-vvmax2-rt.c  waypoints-vvperm-pass.cc  waypoints-vvperm-rt.c
tools/analysis/: analyze_coverage.py  analyze_vvtraces.py  clean_redis_subject_data.py  clean_subject_data.py  plot_diverse_libtpms_avg_length_over_time.py  plot_diverse_libtpms_length_over_time.py  plot_diverse_libtpms_seqs-fullcmd.py  plot_diverse_libtpms_seqs.py  plot_diverse_libtpms_seqs_compare_dist-fullcmd.py  plot_diverse_libtpms_seqs_compare_dist.py  plot_diverse_libtpms_seqs_found_over_time.py  plot_libpng_coverage_heatmap.py  plot_libtpms_seqs.py  plot_maze_times.py  plot_rarebug_diverse_equal_compute_times.py  plot_rarebug_times.py  vectorize_traces.py  with_unused_features_analyze_vvtraces.py
tools/analysis/db/: cassandra_trace_db.py  redis_trace_db.py
tools/analysis/graphs/: graph.py
tools/ferry/: concolic_ffmpeg.py  concolic_libjpeg.py  gtpv1.pcap.txt  input.json.txt  podofo.py  readelf.py  readjson.py  readpcap.py  readtpmc.py
tools/vvdproc/: pom.xml
tools/vvdumpreader/: vvdumpdb.pl  vvdumpreader.pl
(+269 files in other folders)
